Replaced deprecated URL constructor with new URI constructor