@@ -5,14 +5,14 @@ import org.json.JSONArray;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 
 public class CanvasGet {
 
     public static JSONArray getClasses() throws Exception {
         String url = "https://csus.instructure.com/api/v1/courses";
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+        HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
         connection.setRequestMethod("GET");
         connection.setRequestProperty("Authorization", "Bearer " + API_keys.CanvasKey);
 
@@ -27,13 +27,11 @@ public class CanvasGet {
         } else {
             return null;
         }
-
     }
 
     public static JSONArray getHW() throws Exception {
         String url = "https://csus.instructure.com/api/v1/courses/" + 102203 + "/assignments";
-
-        HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+        HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
         connection.setRequestMethod("GET");
         connection.setRequestProperty("Authorization", "Bearer " + API_keys.CanvasKey);
         int responseCode = connection.getResponseCode();
